apps/reflector/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: reflector
  labels:
    goldilocks.fairwinds.com/enabled: "true"
